css/initial.css
/* ... */
@media all and (min-width: 1180px) {
    .heading {
        margin-left: calc(-1 * var(--base-font-size));
    }
}

/*  H1.
 */

section.level1 > .heading {
    text-align: right;
    font-weight: 600;
    font-variant-caps: small-caps;
    letter-spacing: -0.75px;
    padding: 0 0.05em 0.025em calc(1.25 * var(--base-font-size));
    border-bottom: 1px solid var(--GW-H1-border-color);
}
@media all and (max-width: 1179px) {
    section.level1 > .heading {
        font-size: 1.75em;
    }
}
@media all and (min-width: 1180px) {
    section.level1 > .heading {
        font-size: 2em;
    }
}

section.level1 > .heading em {
    font-variant-caps: normal;
}
section.level1 > .heading em:last-child {
    padding-right: 0.075em;
}

/*  H2.
 */
section.level2 > .heading {
    text-transform: uppercase;
    font-size: 1.4em;
    padding: 0 calc(0.75 * var(--base-font-size)) 0.05em 0;
    border-bottom: 1px dotted var(--GW-H2-border-color);
}

/*  H3.
 */
section.level3 > .heading {
    font-size: 1.35em;
    font-weight: bold;
}

/*  H4.
 */
section.level4 > .heading {
    font-size: 1.2em;
}

/*  H5.
 */
section.level5 > .heading {
    font-size: 1.1em;
}

/*  H6.
 */
section.level6 > .heading {
    font-size: 1.1em;
    font-weight: normal;
    font-style: italic;
}

/*=---------------------------=*/
/*= Misc. styling in headings =*/
/*=---------------------------=*/

/*  No link underlining in headings.
 */
.markdownBody .heading a {
    background: none;
}

/*  No visited link styling in headings.
 */
.markdownBody .heading a:link,
.markdownBody .heading a:visited {
    color: var(--GW-body-link-color);
}
.markdownBody .heading a:hover,
.markdownBody .heading a:visited:hover {
    color: var(--GW-body-link-hover-color);
}

/*  Disable bold within headings.
 */
.heading strong {
    font-weight: inherit;
}

/*  Inline code in headings.
 */
.heading code {
    border: none;
    padding: 0;
    background-color: inherit;
    font-size: inherit;
    font-weight: bold;
    font-variant-caps: normal;
}

/*=------------=*/
/*= /doc/index =*/
/*=------------=*/

body[class*='-index'] section#see-also > .heading a {
    display: none;
}


/**************/
/* PARAGRAPHS */
/**************/

p {
    margin: 0;
}

p.empty-graf {
    height: 0 !important;
    margin: 0 !important;
    visibility: hidden;
}

/*  On wide screens (desktop), use fully-justified text (words get
    broken/hyphenated as necessary to avoid a ‘ragged margin’), overriding
    browser default of ‘flush left, ragged right’ (see
    https://en.wikipedia.org/wiki/Typographic_alignment#Flush_left )

    On mobile/narrow screens, that doesn’t work as well: because browsers do
    greedy layout, justification forces ‘s t r e t c h e d out’ words
    and large spaces, leading to blatant
    https://en.wikipedia.org/wiki/River_(typography) , getting worse the
    narrower the screen (eg. in lists). On wide screens, it isn’t too bad, and
    justification is still better than not, but on mobile it is extremely
    noticeable. Switching to flush left ragged right doesn’t look as nicely
    ‘even’, but it avoids that pathological behavior. (More advanced
    typesetting algorithms like Knuth-Plass
    https://en.wikipedia.org/wiki/Line_wrap_and_word_wrap#Minimum_raggedness
    can handle mobile widths nicely, but no contemporary browser implements
    them natively, and all JS implementations I’ve looked at are buggy.)

    However, do hyphenate at all widths.
*/

.markdownBody p {
    -webkit-hyphens: var(--text-hyphenation);
    hyphens: var(--text-hyphenation);
    text-align: var(--text-alignment);
}

.markdownBody p:not(.first-graf) {
    text-indent: var(--text-indent);
}

/*  Prevent inheritance of indentation property.
 */
.markdownBody p * {
    text-indent: 0em;
}

/*  Specify indentation, alignment, hyphenation.
 */
.markdownBody {
    --text-indent: 1.75em;
    --text-alignment: justify;
    --text-hyphenation: auto;
}
/*  Justification only matters for the wide.
 */
@media all and (max-width: 649px) {
    .markdownBody {
        --text-alignment: left;
    }
}
/*  Larger indentation in main content column on non-phones.
 */
@media all and (min-width: 650px) {
    #markdownBody {
        --text-indent: 2.5em;
    }
}

/**************/
/*  Exceptions.
 */

/*  NOTE: .graf is a class that indicates blocks which act like <p> for styling
    purposes, but are not <p>, such as .stanza in .poem.
 */

/*  EPITAPH (eg /LARPing)
 */
.markdownBody p.text-center,
.markdownBody .graf.text-center p {
    text-align: center;
    text-indent: 0;
}

.markdownBody p.text-right,
.markdownBody .graf.text-right p {
    text-align: right;
    text-indent: 0;
}

/*  POEMS
 */
.poem {
    --text-alignment: left;

    font-family: var(--GW-monospaced-serif-font-stack);
}
@media all and (max-width: 649px) {
    .poem {
        --text-hyphenation: none;
    }
}

.poem-html {
    white-space: pre;
}

.poem .stanza p {
    text-indent: calc(-1 * var(--text-indent));
    padding-left: var(--text-indent);
}

/*  NOTE: Disabling this, because it causes problems with e.g. dark mode switch
    trigger elements in empty poem stanzas. Must watch out for problems caused
    by having empty stanzas not hidden.
        —SA 2026-01-08
/*
.poem .stanza.empty-stanza {
    display: none;
}
 */

.poem .enjambed-line {
    white-space: pre;
}
.poem .enjambment-spacer {
    white-space: pre;
    padding-right: calc(var(--enjambment-step) * 0.5ch);
}

.poem .text-center p {
    padding: 0;
}

.poem .stanza.layout-special-center p {
    display: flex;
    justify-content: center;
}
.poem .stanza.layout-special-center p .segment {
    flex: 1 1 50%;
}
.poem .stanza.layout-special-center p .segment:nth-child(1) {
    text-align: right;
}
.poem .stanza.layout-special-center p .segment:nth-child(2) {
    flex: 0 0 3ch;
    text-align: center;
}
.poem .stanza.layout-special-center p .segment:nth-child(3) {
    text-align: left;
}
/* ... */

